tests/ui/bitxor.stderr
warning: unused import: `SortedDisjointIterator`
 --> tests/ui/bitxor.rs:1:38
  |
1 | use range_set_blaze::{RangeSetBlaze, SortedDisjointIterator};
  |                                      ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0599]: no method named `bitxor` found for struct `IntoRangesIter` in the current scope
 --> tests/ui/bitxor.rs:6:16
  |
6 |     let _c = a.bitxor(b);
  |                ^^^^^^ method not found in `IntoRangesIter<{integer}>`
  |
 ::: $RUST/core/src/ops/bit.rs
  |
  |     fn bitxor(self, rhs: Rhs) -> Self::Output;
  |        ------ the method is available for `IntoRangesIter<{integer}>` here
  |
  = help: items from traits can only be used if the trait is in scope
help: the following trait is implemented but not in scope; perhaps add a `use` for it:
    |
1   | use std::ops::BitXor;
    |
